--- a/css/style.publications.css
+++ b/css/style.publications.css
@@ -1,7 +1,3 @@
-h3 {
-  margin-bottom: 0;
-}
-
 .nav-pills {
   margin-top: 24px;
 }
@@ -10,4 +6,12 @@ h3 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.nav-pills > li > a.category > span.badge {
+  margin-left: 10px;
+}
+
+span.tag-item {
+  margin-right: 5px;
 }
